[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
morphcss_core = { path = "crates/morphcss_core" }
morphcss_parser = { path = "crates/morphcss_parser" }
morphcss_compiler = { path = "crates/morphcss_compiler" }

blake3 = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10.0"
dashmap = { version = "5.5.3", features = ["serde"] }
lightningcss = "1.0.0-alpha.71"
oxc_parser = "0.13.0"
oxc_ast = "0.13.0"
oxc_allocator = "0.13.0"
oxc_span = "0.13.0"
oxc_traverse = "0.13.0"
